--- a/pages/file-storage.html
+++ b/pages/file-storage.html
@@ -113,8 +113,14 @@
 										</a>
 									</li>
 									<li class="nav-item">
-										<a href="templates.html" class="nav-link _active-page font-weight-bold p-2 _icon-pattern">
+										<a href="templates.html" class="nav-link  font-weight-bold p-2 _icon-pattern">
 											<p> Шаблоны</p>
+										</a>
+									</li>
+									<li class="nav-item">
+										<a href="./file-storage.html"
+											class="nav-link _active-page font-weight-bold p-2 _icon-folder">
+											<p> Файловое хранилище </p>
 										</a>
 									</li>
 								</ul>
@@ -142,220 +148,176 @@
 			</div>
 
 			<div class="container-content">
-				<div class="file-storage">
-					<ul class="file-storage__list">
-						<li class="file-storage__item">
-							<a href="#" class="file-storage__link">
-								<div class="file-storage__icon _icon-folder"></div>
-								<div class="file-storage__name">Папка</div>
-							</a>
-							<div class="file-storage__dropdown-btn dropdown-search">
-								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
-								</button>
-								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item ">Редактировать</button>
-									<button type="button" class="dropdown-item ">Удалить</button>
-								</div>
-							</div>
-						</li>
-						<li class="file-storage__item">
-							<a href="#" class="file-storage__link">
-								<div class="file-storage__icon _icon-folder"></div>
-								<div class="file-storage__name">Папка</div>
-							</a>
-							<div class="file-storage__dropdown-btn dropdown-search">
-								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
-								</button>
-								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item ">Редактировать</button>
-									<button type="button" class="dropdown-item ">Удалить</button>
-								</div>
-							</div>
-						</li>
-						<li class="file-storage__item">
-							<a href="#" class="file-storage__link">
-								<div class="file-storage__icon _icon-folder"></div>
-								<div class="file-storage__name">Папка</div>
-							</a>
-							<div class="file-storage__dropdown-btn dropdown-search">
-								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
-								</button>
-								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item ">Редактировать</button>
-									<button type="button" class="dropdown-item ">Удалить</button>
-								</div>
-							</div>
-						</li>
-						<li class="file-storage__item">
-							<a href="#" class="file-storage__link">
-								<div class="file-storage__icon _icon-folder"></div>
-								<div class="file-storage__name">Папка</div>
-							</a>
-							<div class="file-storage__dropdown-btn dropdown-search">
-								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
-								</button>
-								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item ">Редактировать</button>
-									<button type="button" class="dropdown-item ">Удалить</button>
-								</div>
-							</div>
-						</li>
-						<li class="file-storage__item">
-							<a href="#" class="file-storage__link">
-								<div class="file-storage__icon _icon-template"></div>
-								<div class="file-storage__name">шаблон</div>
-							</a>
-							<div class="file-storage__dropdown-btn dropdown-search">
-								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
-								</button>
-								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item ">Редактировать</button>
-									<button type="button" class="dropdown-item ">Удалить</button>
-								</div>
-							</div>
-						</li>
-						<li class="file-storage__item">
-							<a href="#" class="file-storage__link">
-								<div class="file-storage__icon _icon-template"></div>
-								<div class="file-storage__name">шаблон</div>
-							</a>
-							<div class="file-storage__dropdown-btn dropdown-search">
-								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
-								</button>
-								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item ">Редактировать</button>
-									<button type="button" class="dropdown-item ">Удалить</button>
-								</div>
-							</div>
-						</li>
-						<li class="file-storage__item">
-							<a href="#" class="file-storage__link">
-								<div class="file-storage__icon _icon-template"></div>
-								<div class="file-storage__name">шаблон</div>
-							</a>
-							<div class="file-storage__dropdown-btn dropdown-search">
-								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
-								</button>
-								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item ">Редактировать</button>
-									<button type="button" class="dropdown-item ">Удалить</button>
-								</div>
-							</div>
-						</li>
-						<li class="file-storage__item">
-							<a href="#" class="file-storage__link">
-								<div class="file-storage__icon _icon-clipboard"></div>
-								<div class="file-storage__name">документ</div>
-							</a>
-							<div class="file-storage__dropdown-btn dropdown-search">
-								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
-								</button>
-								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item ">Редактировать</button>
-									<button type="button" class="dropdown-item ">Удалить</button>
-								</div>
-							</div>
-						</li>
-						<li class="file-storage__item">
-							<a href="#" class="file-storage__link">
-								<div class="file-storage__icon _icon-clipboard"></div>
-								<div class="file-storage__name">документ</div>
-							</a>
-							<div class="file-storage__dropdown-btn dropdown-search">
-								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
-								</button>
-								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item ">Редактировать</button>
-									<button type="button" class="dropdown-item ">Удалить</button>
-								</div>
-							</div>
-						</li>
-						<li class="file-storage__item">
-							<a href="#" class="file-storage__link">
-								<div class="file-storage__icon _icon-clipboard"></div>
-								<div class="file-storage__name">документ</div>
-							</a>
-							<div class="file-storage__dropdown-btn dropdown-search">
-								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
-								</button>
-								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item ">Редактировать</button>
-									<button type="button" class="dropdown-item ">Удалить</button>
-								</div>
-							</div>
-						</li>
-						<li class="file-storage__item">
-							<a href="#" class="file-storage__link">
-								<div class="file-storage__icon _icon-smeta"></div>
-								<div class="file-storage__name">смета</div>
-							</a>
-							<div class="file-storage__dropdown-btn dropdown-search">
-								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
-								</button>
-								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item ">Редактировать</button>
-									<button type="button" class="dropdown-item ">Удалить</button>
-								</div>
-							</div>
-						</li>
-						<li class="file-storage__item">
-							<a href="#" class="file-storage__link">
-								<div class="file-storage__icon _icon-smeta"></div>
-								<div class="file-storage__name">смета</div>
-							</a>
-							<div class="file-storage__dropdown-btn dropdown-search">
-								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
-								</button>
-								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item ">Редактировать</button>
-									<button type="button" class="dropdown-item ">Удалить</button>
-								</div>
-							</div>
-						</li>
-						<li class="file-storage__item">
-							<a href="#" class="file-storage__link">
-								<div class="file-storage__icon _icon-smeta"></div>
-								<div class="file-storage__name">смета</div>
-							</a>
-							<div class="file-storage__dropdown-btn dropdown-search">
-								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
-								</button>
-								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item ">Редактировать</button>
-									<button type="button" class="dropdown-item ">Удалить</button>
-								</div>
-							</div>
-						</li>
+				<div class="search-items" data-search-items="">
+					<div class="search-items__input search-block _icon-search mb-3">
+						<input type="text" onkeyup="searchItems()" placeholder="Поиск" class=" input-default">
+					</div>
 
-						<li class="file-storage__item">
-							<a href="#" class="file-storage__link">
-								<div class="file-storage__icon _icon-image"></div>
-								<div class="file-storage__name">картинка</div>
-							</a>
-							<div class="file-storage__dropdown-btn dropdown-search">
+					<ul class="search-items__list ">
+						<li class="search-items__item  _icon-folder ">
+							<span class="flex-fill "> Сметы</span> <span>12.12.2024</span>
+							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
 								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item ">Редактировать</button>
-									<button type="button" class="dropdown-item ">Удалить</button>
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
 								</div>
 							</div>
 						</li>
-						<li class="file-storage__item">
-							<a href="#" class="file-storage__link">
-								<div class="file-storage__icon _icon-image"></div>
-								<div class="file-storage__name">картинка</div>
-							</a>
-							<div class="file-storage__dropdown-btn dropdown-search">
+						<li class="search-items__item _icon-folder ">
+							<span class="flex-fill "> Визуализации</span> <span>12.12.2024</span>
+							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
 								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item ">Редактировать</button>
-									<button type="button" class="dropdown-item ">Удалить</button>
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
+								</div>
+							</div>
+						</li>
+						<li class="search-items__item  _icon-folder ">
+							<span class="flex-fill "> Всякое разное</span> <span>12.12.2024</span>
+							<div class="search-items__btn-dropdown dropdown-search">
+								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
+								</button>
+								<div class="dropdown-menu " x-placement="bottom-start">
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
+								</div>
+							</div>
+						</li>
+						<li class="search-items__item  _icon-smeta ">
+							<span class="flex-fill "> Предварительная смета на монтаж инженерных коммуникаций №
+								15/11/2024—1</span> <span>12.12.2024</span>
+							<div class="search-items__btn-dropdown dropdown-search">
+								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
+								</button>
+								<div class="dropdown-menu " x-placement="bottom-start">
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
+								</div>
+							</div>
+						</li>
+						<li class="search-items__item  _icon-smeta ">
+							<span class="flex-fill "> Предварительная смета на монтаж инженерных коммуникаций №
+								15/11/2024—1</span> <span>12.12.2024</span>
+							<div class="search-items__btn-dropdown dropdown-search">
+								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
+								</button>
+								<div class="dropdown-menu " x-placement="bottom-start">
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
+								</div>
+							</div>
+						</li>
+						<li class="search-items__item  _icon-smeta ">
+							<span class="flex-fill ">Предварительная смета на монтаж инженерных коммуникаций №
+								15/11/2024—1</span> <span>12.12.2024</span>
+							<div class="search-items__btn-dropdown dropdown-search">
+								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
+								</button>
+								<div class="dropdown-menu " x-placement="bottom-start">
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
+								</div>
+							</div>
+						</li>
+						<li class="search-items__item  _icon-smeta ">
+							<span class="flex-fill "> Предварительная смета на монтаж инженерных коммуникаций №
+								15/11/2024—1</span> <span>12.12.2024</span>
+							<div class="search-items__btn-dropdown dropdown-search">
+								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
+								</button>
+								<div class="dropdown-menu " x-placement="bottom-start">
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
+								</div>
+							</div>
+						</li>
+						<li class="search-items__item _icon-smeta ">
+							<span class="flex-fill "> Предварительная смета на монтаж инженерных коммуникаций №
+								15/11/2024—1</span> <span>12.12.2024</span>
+							<div class="search-items__btn-dropdown dropdown-search">
+								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
+								</button>
+								<div class="dropdown-menu " x-placement="bottom-start">
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
+								</div>
+							</div>
+						</li>
+						<li class="search-items__item  _icon-smeta ">
+							<span class="flex-fill "> Предварительная смета на монтаж инженерных коммуникаций №
+								15/11/2024—1</span> <span>12.12.2024</span>
+							<div class="search-items__btn-dropdown dropdown-search">
+								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
+								</button>
+								<div class="dropdown-menu " x-placement="bottom-start">
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
+								</div>
+							</div>
+						</li>
+						<li class="search-items__item  _icon-clipboard ">
+							<span class="flex-fill ">Какая-то пдфка.pdf</span> <span>12.12.2024</span>
+							<div class="search-items__btn-dropdown dropdown-search">
+								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
+								</button>
+								<div class="dropdown-menu " x-placement="bottom-start">
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
+								</div>
+							</div>
+						</li>
+						<li class="search-items__item  _icon-clipboard ">
+							<span class="flex-fill ">Какая-то экселька.xls</span> <span>12.12.2024</span>
+							<div class="search-items__btn-dropdown dropdown-search">
+								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
+								</button>
+								<div class="dropdown-menu " x-placement="bottom-start">
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
+								</div>
+							</div>
+						</li>
+						<li class="search-items__item  _icon-image ">
+							<span class="flex-fill ">Какая-то джпежка.jpg</span> <span>12.12.2024</span>
+							<div class="search-items__btn-dropdown dropdown-search">
+								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
+								</button>
+								<div class="dropdown-menu " x-placement="bottom-start">
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
+								</div>
+							</div>
+						</li>
+						<li class="search-items__item  _icon-image ">
+							<span class="flex-fill ">Какая-то пнгшка.png</span> <span>12.12.2024</span>
+							<div class="search-items__btn-dropdown dropdown-search">
+								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
+								</button>
+								<div class="dropdown-menu " x-placement="bottom-start">
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
+								</div>
+							</div>
+						</li>
+						<li class="search-items__item  _icon-image ">
+							<span class="flex-fill ">Какая-то пнгшка.png</span> <span>12.12.2024</span>
+							<div class="search-items__btn-dropdown dropdown-search">
+								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
+								</button>
+								<div class="dropdown-menu " x-placement="bottom-start">
+									<button type="button" class="dropdown-item">Редактировать</button>
+									<button type="button" class="dropdown-item">Удалить</button>
 								</div>
 							</div>
 						</li>
 					</ul>
+
+
+
 				</div>
 
 			</div>
