--- a/pages/templates.html
+++ b/pages/templates.html
@@ -117,6 +117,11 @@
 											<p> Шаблоны</p>
 										</a>
 									</li>
+									<li class="nav-item">
+										<a href="./file-storage.html" class="nav-link font-weight-bold p-2 _icon-folder">
+											<p> Файловое хранилище </p>
+										</a>
+									</li>
 								</ul>
 							</nav>
 						</div>
@@ -149,7 +154,7 @@
 
 					<ul class="search-items__list ">
 						<li class="search-items__item  _icon-folder ">
-							<a href="./template-category.html" class="flex-fill "> Септики</a> <span>12.12.2024</span>
+							<a href="./template-page.html" class="flex-fill "> Септики</a> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
@@ -160,7 +165,7 @@
 							</div>
 						</li>
 						<li class="search-items__item  _icon-folder ">
-							<a href="./template-category.html" class="flex-fill "> Канализация</a> <span>12.12.2024</span>
+							<a href="./template-page.html" class="flex-fill "> Канализация</a> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
@@ -171,7 +176,7 @@
 							</div>
 						</li>
 						<li class="search-items__item  _icon-folder ">
-							<a href="./template-category.html" class="flex-fill"> Фундамент</a> <span>12.12.2024</span>
+							<a href="./template-page.html" class="flex-fill"> Фундамент</a> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
@@ -182,7 +187,7 @@
 							</div>
 						</li>
 						<li class="search-items__item  _icon-folder ">
-							<a href="./template-category.html" class="flex-fill "> Скважины</a> <span>12.12.2024</span>
+							<a href="./template-page.html" class="flex-fill "> Скважины</a> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
