--- a/pages/create-template.html
+++ b/pages/create-template.html
@@ -117,6 +117,11 @@
 											<p> Шаблоны</p>
 										</a>
 									</li>
+									<li class="nav-item">
+										<a href="./file-storage.html" class="nav-link font-weight-bold p-2 _icon-folder">
+											<p> Файловое хранилище </p>
+										</a>
+									</li>
 								</ul>
 							</nav>
 						</div>
