--- a/pages/price-list.html
+++ b/pages/price-list.html
@@ -128,6 +128,11 @@
 
                     </a>
                   </li>
+                  <li class="nav-item">
+                    <a href="./file-storage.html" class="nav-link font-weight-bold p-2 _icon-folder">
+                      <p> Файловое хранилище </p>
+                    </a>
+                  </li>
                 </ul>
               </nav>
             </div>
@@ -160,7 +165,7 @@
 
       <div class="container-content">
 
-        <table id="example2" class="price-list" aria-describedby="example2_info">
+        <table id="tablePriceList" class="price-list">
           <thead>
             <tr>
 
@@ -263,34 +268,10 @@
   <script src="../plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
   <script src="../plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
   <script src="../plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
-  <!-- jQuery UI 1.11.4 -->
-  <script src="../plugins/jquery-ui/jquery-ui.min.js"></script>
-  <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-
-  <!-- Bootstrap4 Duallistbox -->
-  <script src="../plugins/bootstrap4-duallistbox/jquery.bootstrap-duallistbox.min.js"></script>
-
-  <script src="../plugins/moment/moment.min.js"></script>
-  <script src="../plugins/inputmask/jquery.inputmask.min.js"></script>
-  <script src="../plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-  <script src="../plugins/bootstrap-switch/js/bootstrap-switch.min.js"></script>
-  <script src="../plugins/bs-stepper/js/bs-stepper.min.js"></script>
-  <!-- JQVMap -->
-  <!-- <script src="./plugins/jqvmap/jquery.vmap.min.js"></script>
-  <script src="./plugins/jqvmap/maps/jquery.vmap.usa.js"></script> -->
-  <!-- jQuery Knob Chart -->
-  <script src="../plugins/jquery-knob/jquery.knob.min.js"></script>
-  <!-- daterangepicker -->
 
 
-  <script src="../plugins/daterangepicker/daterangepicker.js"></script>
 
-  <!-- Tempusdominus Bootstrap 4 -->
-  <!-- overlayScrollbars -->
-  <!-- <script src="./plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script> -->
 
-  <!-- Summernote -->
-  <script src="../plugins/summernote/summernote-bs4.min.js"></script>
   <!-- AdminLTE App -->
   <script src="../dist/js/adminlte.min.js?v=3.2.0"></script>
 
