--- a/pages/template-page.html
+++ b/pages/template-page.html
@@ -117,6 +117,11 @@
 											<p> Шаблоны</p>
 										</a>
 									</li>
+									<li class="nav-item">
+										<a href="./file-storage.html" class="nav-link font-weight-bold p-2 _icon-folder">
+											<p> Файловое хранилище </p>
+										</a>
+									</li>
 								</ul>
 							</nav>
 						</div>
@@ -127,20 +132,20 @@
 		<!-- Конец главгый сайдбар -->
 
 		<div class="content-wrapper p-4 tooltip-margin-bottom">
-			<div class="bc">
+
+
+
+			<div class="d-flex align-items-center mb-3">
+				<button type="button" class="d-flex align-items-center _icon-arrow-back"></button>
+				<h1 class="big-title mb-0">По количеству человек</h1>
+			</div>
+			<div class="bc mb-4">
 				<ul class="bc__list">
 					<li><a href="#">Шаблоны</a></li>
 					<li><a href="#">Септики</a></li>
 					<li><a href="#">По количеству человек</a></li>
 				</ul>
 			</div>
-
-
-			<div class="d-flex align-items-center mb-4">
-				<button type="button" class="d-flex align-items-center _icon-arrow-back"></button>
-				<h1 class="big-title mb-0">По количеству человек</h1>
-			</div>
-
 
 			<div class="btn-group btn-dropdown mb-4">
 				<button type="button" class="butt-success dropdown-toggle _icon-plus d-flex align-items-center"
