--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
                     </a>
                   </li>
                   <li class="nav-item">
+                    <a href="./pages/users-page.html" class="nav-link font-weight-bold p-2 _icon-user">
+                      <p> Пользователи </p>
+                    </a>
+                  </li>
+                  <li class="nav-item">
                     <a href="./pages/file-storage.html" class="nav-link font-weight-bold p-2 _icon-folder">
                       <p> Файловое хранилище </p>
                     </a>
