--- a/pages/create-smeta.html
+++ b/pages/create-smeta.html
@@ -118,6 +118,11 @@
 										</a>
 									</li>
 									<li class="nav-item">
+										<a href="./users-page.html" class="nav-link  font-weight-bold p-2 _icon-user">
+											<p> Пользователи </p>
+										</a>
+									</li>
+									<li class="nav-item">
 										<a href="./file-storage.html" class="nav-link font-weight-bold p-2 _icon-folder">
 											<p> Файловое хранилище </p>
 										</a>
