--- a/index.html
+++ b/index.html
@@ -6,30 +6,11 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite App</title>
-  <!-- Google Font: Source Sans Pro -->
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
-  <!-- Ionicons -->
-  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <!-- Tempusdominus Bootstrap 4 -->
-  <link rel="stylesheet" href="./public/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
-  <!-- Select2 -->
-  <link rel="stylesheet" href="./plugins/select2/css/select2.min.css">
-  <link rel="stylesheet" href="./plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css">
-  <!-- iCheck -->
-  <link rel="stylesheet" href="./public/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
-  <!-- JQVMap -->
-  <link rel="stylesheet" href="./public/plugins/jqvmap/jqvmap.min.css">
-  <!-- Theme style -->
+
   <link rel="stylesheet" href="./public/dist/css/adminlte.min.css">
-  <!-- overlayScrollbars -->
+
   <link rel="stylesheet" href="./public/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
-  <!-- Daterange picker -->
-  <link rel="stylesheet" href="./public/plugins/daterangepicker/daterangepicker.css">
-  <!-- summernote -->
-  <link rel="stylesheet" href="./public//plugins/summernote/summernote-bs4.min.css">
+
 </head>
 
 <body class="sidebar-mini layout-fixed">
@@ -361,44 +342,27 @@
   <script src="./plugins/jquery/jquery.min.js"></script>
   <!-- Bootstrap 4 -->
   <script src="./public/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <!-- Select2 -->
-  <script src="./public/plugins/select2/js/select2.full.min.js"></script>
-  <!-- jQuery UI 1.11.4 -->
+
+
+
   <script src="./public/plugins/jquery-ui/jquery-ui.min.js"></script>
-  <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-  <script>
-    $.widget.bridge('uibutton', $.ui.button)
-  </script>
-  <!-- Bootstrap4 Duallistbox -->
-  <script src="./public/plugins/bootstrap4-duallistbox/jquery.bootstrap-duallistbox.min.js"></script>
-
-  <script src="./public/plugins/moment/moment.min.js"></script>
-  <script src="./public/plugins/inputmask/jquery.inputmask.min.js"></script>
-  <script src="./public/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-  <script src="./public/plugins/bootstrap-switch/js/bootstrap-switch.min.js"></script>
-  <script src="./public/plugins/bs-stepper/js/bs-stepper.min.js"></script>
-  <!-- JQVMap -->
-  <!-- <script src="./public/plugins/jqvmap/jquery.vmap.min.js"></script>
-  <script src="./public/plugins/jqvmap/maps/jquery.vmap.usa.js"></script> -->
-  <!-- jQuery Knob Chart -->
-  <script src="plugins/jquery-knob/jquery.knob.min.js"></script>
-  <!-- daterangepicker -->
 
 
+
+
+
+
+
+
+  <!-- календарь -->
   <script src="./public/plugins/daterangepicker/daterangepicker.js"></script>
 
-  <!-- Tempusdominus Bootstrap 4 -->
-  <!-- overlayScrollbars -->
-  <!-- <script src="./public/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script> -->
 
-  <!-- Summernote -->
-  <script src="./public/plugins/summernote/summernote-bs4.min.js"></script>
+
+
   <!-- AdminLTE App -->
   <script src="../dist/js/adminlte.min.js?v=3.2.0"></script>
-  <!-- AdminLTE for demo purposes -->
-  <!-- <script src="./public/dist/js/demo.js"></script> -->
 
-  <!-- <script src="./public/dist/js/pages/dashboard.js"></script> -->
 
   <script type="module" src="./src/assets/js/main.js"></script>
 
