--- a/pages/users-page.html
+++ b/pages/users-page.html
@@ -5,31 +5,14 @@
 	<meta charset="UTF-8" />
 	<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Vite App</title>
-	<!-- Google Font: Source Sans Pro -->
-	<link rel="stylesheet"
-		href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-	<!-- Font Awesome -->
-	<link rel="stylesheet" href="../plugins/fontawesome-free/css/all.min.css">
-	<!-- Ionicons -->
-	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-	<!-- Tempusdominus Bootstrap 4 -->
-	<link rel="stylesheet" href="../plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
-	<!-- Select2 -->
-	<link rel="stylesheet" href="../plugins/select2/css/select2.min.css">
-	<link rel="stylesheet" href="../plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css">
-	<!-- iCheck -->
-	<link rel="stylesheet" href="../plugins/icheck-bootstrap/icheck-bootstrap.min.css">
-	<!-- JQVMap -->
-	<link rel="stylesheet" href="../plugins/jqvmap/jqvmap.min.css">
+	<title>Пользователи
+	</title>
+
 	<!-- Theme style -->
 	<link rel="stylesheet" href="../public/dist/css/adminlte.min.css">
 	<!-- overlayScrollbars -->
 	<link rel="stylesheet" href="../plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
-	<!-- Daterange picker -->
-	<link rel="stylesheet" href="../plugins/daterangepicker/daterangepicker.css">
-	<!-- summernote -->
-	<link rel="stylesheet" href="../public//plugins/summernote/summernote-bs4.min.css">
+
 </head>
 
 <body class="sidebar-mini layout-fixed">
@@ -305,16 +288,14 @@
 
 	<!-- jQuery -->
 	<script src="../plugins/jquery/jquery.min.js"></script>
-	<!-- Select2 -->
-	<script src="../plugins/select2/js/select2.full.min.js"></script>
+
 	<!-- Bootstrap 4 -->
 	<script src="../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 	<script src="../plugins/datatables/jquery.dataTables.min.js"></script>
 	<script src="../plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
 	<script src="../plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
-	<script src="../plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
-	<script src="../plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
-	<script src="../plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
+
+
 
 
 	<!-- AdminLTE App -->
@@ -328,7 +309,7 @@
 		<div class="modal-dialog modal-lg">
 			<div class="modal-content modal-custom">
 				<div class="modal-custom__content">
-					<div class="modal-custom__title middle-title mb-3">Редактировать пользвателя</div>
+					<div class="modal-custom__title middle-title mb-3">Редактировать пользователя</div>
 					<div class="block-item">
 
 
