--- a/pages/client-page.html
+++ b/pages/client-page.html
@@ -37,7 +37,7 @@
 				<div class="os-padding">
 					<div class="os-viewport os-viewport-native-scrollbars-invisible" style="overflow-y: scroll;">
 						<div class="os-content px-3">
-							<a class=" mt-4 d-block _icon-sidebar-arrow " data-widget="pushmenu" href="#" role="button"></a>
+							<button class=" mt-4 d-block _icon-sidebar-arrow " data-widget="pushmenu" type="button"></button>
 							<!-- Sidebar user (optional) -->
 							<div class="user-panel mt-4  mb-4 d-flex align-items-center">
 								<div class="image">
