--- a/pages/price-list.html
+++ b/pages/price-list.html
@@ -35,7 +35,7 @@
         <div class="os-padding">
           <div class="os-viewport os-viewport-native-scrollbars-invisible" style="overflow-y: scroll;">
             <div class="os-content px-3">
-              <a class=" mt-4 d-block _icon-sidebar-arrow " data-widget="pushmenu" href="#" role="button"></a>
+              <button class=" mt-4 d-block _icon-sidebar-arrow " data-widget="pushmenu" type="button"></button>
               <!-- Sidebar user (optional) -->
               <div class="user-panel mt-4  mb-4 d-flex align-items-center">
                 <div class="image">
@@ -46,33 +46,7 @@
                 </div>
               </div>
 
-              <!-- SidebarSearch Form -->
-              <div class="form-inline">
-                <div class="input-group" data-widget="sidebar-search">
-                  <input class="form-control form-control-sidebar" type="search" placeholder="Поиск"
-                    aria-label="Search">
-                  <div class="input-group-append">
-                    <button class="btn btn-sidebar _icon-search">
 
-                    </button>
-                  </div>
-                </div>
-                <div class="sidebar-search-results">
-                  <div class="list-group"><a href="#" class="list-group-item">
-                      <div class="search-title"><strong class="text-light"></strong>N<strong
-                          class="text-light"></strong>o<strong class="text-light"></strong> <strong
-                          class="text-light"></strong>e<strong class="text-light"></strong>l<strong
-                          class="text-light"></strong>e<strong class="text-light"></strong>m<strong
-                          class="text-light"></strong>e<strong class="text-light"></strong>n<strong
-                          class="text-light"></strong>t<strong class="text-light"></strong> <strong
-                          class="text-light"></strong>f<strong class="text-light"></strong>o<strong
-                          class="text-light"></strong>u<strong class="text-light"></strong>n<strong
-                          class="text-light"></strong>d<strong class="text-light"></strong>!<strong
-                          class="text-light"></strong></div>
-                      <div class="search-path"></div>
-                    </a></div>
-                </div>
-              </div>
 
               <nav class="mt-4">
                 <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu"
@@ -81,7 +55,7 @@
                        with font-awesome or any other icon font library -->
 
                   <li class="nav-item">
-                    <a href="../index.html" class="nav-link font-weight-bold _icon-dashboard">
+                    <a href="../index.html" class="nav-link font-weight-bold p-2 _icon-dashboard">
 
                       <p> Дашборд</p>
 
@@ -89,21 +63,21 @@
 
                   </li>
                   <li class="nav-item">
-                    <a href="./price-list.html" class="nav-link _active-page font-weight-bold _icon-priceList">
+                    <a href="./price-list.html" class="nav-link _active-page p-2 font-weight-bold _icon-priceList">
 
                       <p> Прайс-лист</p>
 
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="./clients.html" class="nav-link font-weight-bold _icon-client">
+                    <a href="./clients.html" class="nav-link font-weight-bold p-2 _icon-client">
 
                       <p> Клиенты</p>
 
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="templates.html" class="nav-link font-weight-bold _icon-pattern">
+                    <a href="templates.html" class="nav-link font-weight-bold p-2 _icon-pattern">
                       <p>
 
                         Шаблоны
