--- a/pages/users-page.html
+++ b/pages/users-page.html
@@ -35,7 +35,7 @@
 				<div class="os-padding">
 					<div class="os-viewport os-viewport-native-scrollbars-invisible" style="overflow-y: scroll;">
 						<div class="os-content px-3">
-							<a class=" mt-4 d-block _icon-sidebar-arrow " data-widget="pushmenu" href="#" role="button"></a>
+							<button class=" mt-4 d-block _icon-sidebar-arrow " data-widget="pushmenu" type="button"></button>
 							<!-- Sidebar user (optional) -->
 							<div class="user-panel mt-4  mb-4 d-flex align-items-center">
 								<div class="image">
@@ -57,21 +57,7 @@
 										</button>
 									</div>
 								</div>
-								<div class="sidebar-search-results">
-									<div class="list-group"><a href="#" class="list-group-item">
-											<div class="search-title"><strong class="text-light"></strong>N<strong
-													class="text-light"></strong>o<strong class="text-light"></strong> <strong
-													class="text-light"></strong>e<strong class="text-light"></strong>l<strong
-													class="text-light"></strong>e<strong class="text-light"></strong>m<strong
-													class="text-light"></strong>e<strong class="text-light"></strong>n<strong
-													class="text-light"></strong>t<strong class="text-light"></strong> <strong
-													class="text-light"></strong>f<strong class="text-light"></strong>o<strong
-													class="text-light"></strong>u<strong class="text-light"></strong>n<strong
-													class="text-light"></strong>d<strong class="text-light"></strong>!<strong
-													class="text-light"></strong></div>
-											<div class="search-path"></div>
-										</a></div>
-								</div>
+
 							</div>
 
 							<nav class="mt-4">
