--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite App</title>
-
+  <link rel="stylesheet" href="../plugins/select2/css/select2.min.css">
   <link rel="stylesheet" href="./public/dist/css/adminlte.min.css">
 
   <link rel="stylesheet" href="./public/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
@@ -109,8 +109,21 @@
           <div class="container-content">
             <div class="middle-title">Привет, Имя менеджера!</div>
             <div class="very-small-title">manager@sewera.ru</div>
-            <a href="./pages/create-smeta.html"
-              class="butt btn-success _icon-plus d-flex align-items-center">Создать</a>
+
+            <div class="btn-group btn-dropdown mb-4">
+              <button type="button" class="butt-success dropdown-toggle _icon-plus d-flex align-items-center"
+                data-toggle="dropdown" aria-expanded="false">Создать
+              </button>
+              <div class="dropdown-menu">
+                <a href="./pages/create-smeta.html" class="dropdown-item _icon-smeta">Смету</a>
+                <a href="./pages/create-template.html" class="dropdown-item _icon-template">Шаблон</a>
+                <button type="button" class="dropdown-item _icon-user" data-toggle="modal"
+                  data-target="#modal-client">Клиента</button>
+
+              </div>
+            </div>
+            <!-- <a href="./pages/create-smeta.html"
+              class="butt btn-success _icon-plus d-flex align-items-center">Создать</a> -->
           </div>
           <div class="container-content">
             <div class="dashboard__status-info-smeta status-info-smeta">
@@ -311,11 +324,72 @@
   </div>
 
 
+  <div class="modal fade" id="modal-client" style="display: none;">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content modal-custom">
+        <form class="modal-custom__content">
+          <div class="modal-custom__title middle-title mb-3">Создание
+            клиента</div>
+          <div class="block-item">
+
+            <div class="block-item__item">
+              <div class="block-item__label">Ф.И.О</div>
+              <div class="block-item__contetn"><input autocomplete="off" type="text" name="Имя"
+                  placeholder="Введите Ф.И.О" class="input-default _validate _edit-input"></div>
+            </div>
+            <div class="block-item__item">
+              <div class="block-item__label">Адрес</div>
+              <div class="block-item__contetn"><input autocomplete="off" type="text" name="Адрес"
+                  placeholder="Введите Адрес" class="input-default _validate _edit-input"></div>
+            </div>
+            <div class="block-item__item">
+              <div class="block-item__label">Координаты</div>
+              <div class="block-item__contetn"><input autocomplete="off" type="text" name="Координаты"
+                  placeholder="Введите координаты" class="input-default _edit-input"></div>
+            </div>
+            <div class="block-item__item">
+              <div class="block-item__label">Комментарии</div>
+              <div class="block-item__contetn"><textarea name="Комментарии" placeholder="Введите комментарии "
+                  class="textarea-default _edit-input"></textarea></div>
+            </div>
+            <div class="block-item__item">
+              <div class="block-item__label mb-0">Менеджер</div>
+              <div class="block-item__contetn">
+                <select class="list-input__select  select2 _edit-input" multiple="multiple" name="Менеджер">
+                  <option></option>
+                  <option value="Дмитрий">Дмитрий</option>
+                  <option value="Наталья">Наталья</option>
+                  <option value="Дмитрий(Митя)">Дмитрий(Митя)</option>
+                </select>
+
+              </div>
+            </div>
+            <div class="block-item__item">
+              <div class="block-item__label mb-0">Инженер</div>
+              <div class="block-item__contetn">
+                <select class="list-input__select  select2 _edit-input" multiple="multiple" name="Инженер">
+                  <option></option>
+                  <option value="Биба">Биба</option>
+                  <option value="Боба">Боба</option>
+                </select>
+
+              </div>
+            </div>
+          </div>
+          <div class="d-flex mt-5 justify-content-between modal-custom__footer">
+            <button type="button" data-dismiss="modal" class="butt">Отмена</button>
+            <button type="button" class="butt-success" onclick="saveEditClient()">Создать клиента</button>
+          </div>
+        </form>
+      </div>
+
+    </div>
+  </div>
   <!-- jQuery -->
   <script src="./plugins/jquery/jquery.min.js"></script>
   <!-- Bootstrap 4 -->
   <script src="./plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+  <script src="../plugins/select2/js/select2.full.min.js"></script>
 
 
   <script src="./plugins/jquery-ui/jquery-ui.min.js"></script>
@@ -331,7 +405,7 @@
   <script src="./plugins/daterangepicker/daterangepicker.js"></script>
 
 
-
+  g
 
   <!-- AdminLTE App -->
   <script src="../dist/js/adminlte.min.js?v=3.2.0"></script>
