feat:сделал выпадющий список

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="middle-title">Привет, Имя менеджера!</div>
             <div class="very-small-title">manager@sewera.ru</div>
 
-            <div class="btn-group btn-dropdown mb-4">
+            <div class="btn-group btn-dropdown">
               <button type="button" class="butt-success dropdown-toggle _icon-plus d-flex align-items-center"
                 data-toggle="dropdown" aria-expanded="false">Создать
               </button>
@@ -122,8 +122,7 @@
 
               </div>
             </div>
-            <!-- <a href="./pages/create-smeta.html"
-              class="butt btn-success _icon-plus d-flex align-items-center">Создать</a> -->
+
           </div>
           <div class="container-content">
             <div class="dashboard__status-info-smeta status-info-smeta">
@@ -156,7 +155,7 @@
                   Павлюшенков Игорь Игнатьевич
 
                 </div>
-                <a href="#" class="_icon-arrow-gray "></a>
+                <a href="#" class="_icon-arrow-gray"></a>
               </div>
 
 
