--- a/pages/create-smeta.html
+++ b/pages/create-smeta.html
@@ -182,7 +182,7 @@
 			</div>
 		</aside>
 		<!-- Конец папки шаблонами -->
-		<div class="content-wrapper p-4 ">
+		<form class="content-wrapper p-4 ">
 			<h1 class="big-title">Создать смету</h1>
 			<div class="container-content">
 				<h2 class="middle-title mb-3">Информация</h2>
@@ -294,13 +294,13 @@
 				<input type="text" class="input-default" name="комментарий">
 			</div>
 			<div class="bulkActionBar container-content">
-				<button type="button" class="butt-success " data-toggle="dropdown" aria-expanded="false">Экспортировать
+				<button type="submit" class="butt-success " data-toggle="dropdown" aria-expanded="false">Экспортировать
 				</button>
 				<button class="butt">Обновить цены</button>
 				<button class="butt bg-gradient-danger" onclick="deleteSelectedItems()">Удалить выброное</button>
 				<div>Кол-во выбраных: <span data-selected-count>0</span></div>
 			</div>
-		</div>
+		</form>
 
 	</div>
 
