feat: перделавть начал поиск

--- a/pages/create-smeta.html
+++ b/pages/create-smeta.html
@@ -113,14 +113,14 @@
 					</div>
 					<div class="search-items" data-search-items>
 						<div class="search-items__input search-block _icon-search mb-3">
-							<input type="text" onkeyup="searchItems()" placeholder="Поиск" class=" input-default">
+							<input type="text" onkeyup="searchItems(event)" placeholder="Поиск" class=" input-default">
 						</div>
 						<button type="button" data-widget="control-sidebar" data-controlsidebar-slide="true"
 							class="butt my-3 butt-success _icon-plus d-flex align-items-center"
 							onclick="creatingSmeta()">Cоздать
 							новую смету</button>
 						<ul class="search-items__list ">
-							<li class="search-items__item  _icon-folder ">
+							<li class="_icon-folder ">
 								<span class="flex-fill "> Септики</span> <span>12.12.2024</span>
 								<div class="search-items__btn-dropdown dropdown-search">
 									<button type="button" class="dropdown-search__btn" data-toggle="dropdown"
@@ -132,7 +132,7 @@
 									</div>
 								</div>
 							</li>
-							<li class="search-items__item  _icon-folder ">
+							<li class="_icon-folder ">
 								<span class="flex-fill "> Канализация</span> <span>12.12.2024</span>
 								<div class="search-items__btn-dropdown dropdown-search">
 									<button type="button" class="dropdown-search__btn" data-toggle="dropdown"
@@ -144,7 +144,7 @@
 									</div>
 								</div>
 							</li>
-							<li class="search-items__item  _icon-folder ">
+							<li class="_icon-folder ">
 								<span class="flex-fill "> Фундамент</span> <span>12.12.2024</span>
 								<div class="search-items__btn-dropdown dropdown-search">
 									<button type="button" class="dropdown-search__btn" data-toggle="dropdown"
@@ -156,7 +156,7 @@
 									</div>
 								</div>
 							</li>
-							<li class="search-items__item  _icon-folder ">
+							<li class="_icon-folder ">
 								<span class="flex-fill "> Скважины</span> <span>12.12.2024</span>
 								<div class="search-items__btn-dropdown dropdown-search">
 									<button type="button" class="dropdown-search__btn" data-toggle="dropdown"
