--- a/pages/file-storage.html
+++ b/pages/file-storage.html
@@ -114,7 +114,7 @@
 					</div>
 
 					<ul class="search-items__list ">
-						<li class="search-items__item  _icon-folder ">
+						<li class="_icon-folder ">
 							<span class="flex-fill "> Сметы</span> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
@@ -136,7 +136,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="search-items__item  _icon-folder ">
+						<li class="_icon-folder ">
 							<span class="flex-fill "> Всякое разное</span> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
@@ -147,7 +147,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="search-items__item  _icon-smeta ">
+						<li class="_icon-smeta ">
 							<span class="flex-fill "> Предварительная смета на монтаж инженерных коммуникаций №
 								15/11/2024—1</span> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
@@ -159,7 +159,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="search-items__item  _icon-smeta ">
+						<li class="_icon-smeta ">
 							<span class="flex-fill "> Предварительная смета на монтаж инженерных коммуникаций №
 								15/11/2024—1</span> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
@@ -171,7 +171,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="search-items__item  _icon-smeta ">
+						<li class="_icon-smeta ">
 							<span class="flex-fill ">Предварительная смета на монтаж инженерных коммуникаций №
 								15/11/2024—1</span> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
@@ -183,7 +183,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="search-items__item  _icon-smeta ">
+						<li class="_icon-smeta ">
 							<span class="flex-fill "> Предварительная смета на монтаж инженерных коммуникаций №
 								15/11/2024—1</span> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
@@ -207,7 +207,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="search-items__item  _icon-smeta ">
+						<li class="_icon-smeta ">
 							<span class="flex-fill "> Предварительная смета на монтаж инженерных коммуникаций №
 								15/11/2024—1</span> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
@@ -219,7 +219,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="search-items__item  _icon-clipboard ">
+						<li class="_icon-clipboard ">
 							<span class="flex-fill ">Какая-то пдфка.pdf</span> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
@@ -230,7 +230,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="search-items__item  _icon-clipboard ">
+						<li class="_icon-clipboard ">
 							<span class="flex-fill ">Какая-то экселька.xls</span> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
@@ -241,7 +241,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="search-items__item  _icon-image ">
+						<li class="_icon-image ">
 							<span class="flex-fill ">Какая-то джпежка.jpg</span> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
@@ -252,7 +252,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="search-items__item  _icon-image ">
+						<li class="_icon-image ">
 							<span class="flex-fill ">Какая-то пнгшка.png</span> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
@@ -263,7 +263,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="search-items__item  _icon-image ">
+						<li class="_icon-image ">
 							<span class="flex-fill ">Какая-то пнгшка.png</span> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
