--- a/pages/template-page.html
+++ b/pages/template-page.html
@@ -124,7 +124,7 @@
 					</div>
 
 					<ul class="search-items__list ">
-						<li class="search-items__item  _icon-template ">
+						<li class="_icon-template ">
 							<span class="flex-fill "> Септики</span> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
@@ -135,7 +135,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="search-items__item  _icon-template ">
+						<li class="_icon-template ">
 							<span class="flex-fill "> Канализация</span> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
@@ -146,7 +146,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="search-items__item  _icon-template ">
+						<li class="_icon-template ">
 							<span class="flex-fill "> Фундамент</span> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
@@ -157,7 +157,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="search-items__item  _icon-template ">
+						<li class="_icon-template ">
 							<span class="flex-fill "> Скважины</span> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
