--- a/pages/templates.html
+++ b/pages/templates.html
@@ -45,19 +45,7 @@
 								</div>
 							</div>
 
-							<!-- SidebarSearch Form -->
-							<div class="form-inline">
-								<div class="input-group" data-widget="sidebar-search">
-									<input class="form-control form-control-sidebar" type="search" placeholder="Поиск"
-										aria-label="Search">
-									<div class="input-group-append">
-										<button class="btn btn-sidebar _icon-search">
 
-										</button>
-									</div>
-								</div>
-
-							</div>
 
 							<nav class="mt-4">
 								<ul class="nav nav-pills nav-sidebar flex-column " data-widget="treeview" role="menu"
@@ -126,7 +114,7 @@
 					</div>
 
 					<ul class="search-items__list ">
-						<li class="search-items__item  _icon-folder ">
+						<li class="_icon-folder ">
 							<a href="./template-page.html" class="flex-fill "> Септики</a> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
@@ -137,7 +125,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="search-items__item  _icon-folder ">
+						<li class="_icon-folder ">
 							<a href="./template-page.html" class="flex-fill "> Канализация</a> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
@@ -148,7 +136,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="search-items__item  _icon-folder ">
+						<li class="_icon-folder ">
 							<a href="./template-page.html" class="flex-fill"> Фундамент</a> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
@@ -159,7 +147,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="search-items__item  _icon-folder ">
+						<li class="_icon-folder ">
 							<a href="./template-page.html" class="flex-fill "> Скважины</a> <span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
