--- a/pages/client-page.html
+++ b/pages/client-page.html
@@ -48,33 +48,6 @@
 								</div>
 							</div>
 
-							<!-- SidebarSearch Form -->
-							<div class="form-inline">
-								<div class="input-group" data-widget="sidebar-search">
-									<input class="form-control form-control-sidebar" type="search" placeholder="Поиск"
-										aria-label="Search">
-									<div class="input-group-append">
-										<button class="btn btn-sidebar _icon-search">
-
-										</button>
-									</div>
-								</div>
-								<div class="sidebar-search-results">
-									<div class="list-group"><a href="#" class="list-group-item">
-											<div class="search-title"><strong class="text-light"></strong>N<strong
-													class="text-light"></strong>o<strong class="text-light"></strong> <strong
-													class="text-light"></strong>e<strong class="text-light"></strong>l<strong
-													class="text-light"></strong>e<strong class="text-light"></strong>m<strong
-													class="text-light"></strong>e<strong class="text-light"></strong>n<strong
-													class="text-light"></strong>t<strong class="text-light"></strong> <strong
-													class="text-light"></strong>f<strong class="text-light"></strong>o<strong
-													class="text-light"></strong>u<strong class="text-light"></strong>n<strong
-													class="text-light"></strong>d<strong class="text-light"></strong>!<strong
-													class="text-light"></strong></div>
-											<div class="search-path"></div>
-										</a></div>
-								</div>
-							</div>
 
 							<nav class="mt-4">
 								<ul class="nav nav-pills nav-sidebar flex-column " data-widget="treeview" role="menu"
@@ -154,7 +127,7 @@
 						</div>
 
 						<ul class="search-items__list ">
-							<li class="search-items__item  _icon-folder ">
+							<li class="_icon-folder ">
 								<span class="flex-fill "> Сметы</span> <span>12.12.2024</span>
 								<div class="search-items__btn-dropdown dropdown-search">
 									<button type="button" class="dropdown-search__btn" data-toggle="dropdown"
@@ -178,7 +151,7 @@
 									</div>
 								</div>
 							</li>
-							<li class="search-items__item  _icon-folder ">
+							<li class="_icon-folder ">
 								<span class="flex-fill "> Всякое разное</span> <span>12.12.2024</span>
 								<div class="search-items__btn-dropdown dropdown-search">
 									<button type="button" class="dropdown-search__btn" data-toggle="dropdown"
@@ -190,7 +163,7 @@
 									</div>
 								</div>
 							</li>
-							<li class="search-items__item  _icon-smeta ">
+							<li class="_icon-smeta ">
 								<span class="flex-fill "> Предварительная смета на монтаж инженерных коммуникаций №
 									15/11/2024—1</span> <span>12.12.2024</span>
 								<div class="search-items__btn-dropdown dropdown-search">
@@ -203,7 +176,7 @@
 									</div>
 								</div>
 							</li>
-							<li class="search-items__item  _icon-smeta ">
+							<li class="_icon-smeta ">
 								<span class="flex-fill "> Предварительная смета на монтаж инженерных коммуникаций №
 									15/11/2024—1</span> <span>12.12.2024</span>
 								<div class="search-items__btn-dropdown dropdown-search">
@@ -216,7 +189,7 @@
 									</div>
 								</div>
 							</li>
-							<li class="search-items__item  _icon-smeta ">
+							<li class="_icon-smeta ">
 								<span class="flex-fill ">Предварительная смета на монтаж инженерных коммуникаций №
 									15/11/2024—1</span> <span>12.12.2024</span>
 								<div class="search-items__btn-dropdown dropdown-search">
@@ -229,7 +202,7 @@
 									</div>
 								</div>
 							</li>
-							<li class="search-items__item  _icon-smeta ">
+							<li class="_icon-smeta ">
 								<span class="flex-fill "> Предварительная смета на монтаж инженерных коммуникаций №
 									15/11/2024—1</span> <span>12.12.2024</span>
 								<div class="search-items__btn-dropdown dropdown-search">
@@ -255,7 +228,7 @@
 									</div>
 								</div>
 							</li>
-							<li class="search-items__item  _icon-smeta ">
+							<li class="_icon-smeta ">
 								<span class="flex-fill "> Предварительная смета на монтаж инженерных коммуникаций №
 									15/11/2024—1</span> <span>12.12.2024</span>
 								<div class="search-items__btn-dropdown dropdown-search">
@@ -268,7 +241,7 @@
 									</div>
 								</div>
 							</li>
-							<li class="search-items__item  _icon-clipboard ">
+							<li class="_icon-clipboard ">
 								<span class="flex-fill ">Какая-то пдфка.pdf</span> <span>12.12.2024</span>
 								<div class="search-items__btn-dropdown dropdown-search">
 									<button type="button" class="dropdown-search__btn" data-toggle="dropdown"
@@ -280,7 +253,7 @@
 									</div>
 								</div>
 							</li>
-							<li class="search-items__item  _icon-clipboard ">
+							<li class="_icon-clipboard ">
 								<span class="flex-fill ">Какая-то экселька.xls</span> <span>12.12.2024</span>
 								<div class="search-items__btn-dropdown dropdown-search">
 									<button type="button" class="dropdown-search__btn" data-toggle="dropdown"
@@ -292,7 +265,7 @@
 									</div>
 								</div>
 							</li>
-							<li class="search-items__item  _icon-image ">
+							<li class="_icon-image ">
 								<span class="flex-fill ">Какая-то джпежка.jpg</span> <span>12.12.2024</span>
 								<div class="search-items__btn-dropdown dropdown-search">
 									<button type="button" class="dropdown-search__btn" data-toggle="dropdown"
@@ -304,7 +277,7 @@
 									</div>
 								</div>
 							</li>
-							<li class="search-items__item  _icon-image ">
+							<li class="_icon-image ">
 								<span class="flex-fill ">Какая-то пнгшка.png</span> <span>12.12.2024</span>
 								<div class="search-items__btn-dropdown dropdown-search">
 									<button type="button" class="dropdown-search__btn" data-toggle="dropdown"
@@ -316,7 +289,7 @@
 									</div>
 								</div>
 							</li>
-							<li class="search-items__item  _icon-image ">
+							<li class="_icon-image ">
 								<span class="flex-fill ">Какая-то пнгшка.png</span> <span>12.12.2024</span>
 								<div class="search-items__btn-dropdown dropdown-search">
 									<button type="button" class="dropdown-search__btn" data-toggle="dropdown"
