--- a/pages/client-page.html
+++ b/pages/client-page.html
@@ -123,7 +123,7 @@
 				<div class="container-content" style='flex:0 1 66.337%'>
 					<div class="search-items" data-search-items>
 						<div class="search-items__input search-block _icon-search mb-3">
-							<input type="text" onkeyup="searchItems()" placeholder="Поиск" class=" input-default">
+							<input type="text" onkeyup="searchItems(event)" placeholder="Поиск" class=" input-default">
 						</div>
 
 						<ul class="search-items__list ">
