--- a/pages/templates.html
+++ b/pages/templates.html
@@ -110,7 +110,7 @@
 			<div class="container-content">
 				<div class="search-items" data-search-items>
 					<div class="search-items__input search-block _icon-search mb-3">
-						<input type="text" onkeyup="searchItems()" placeholder="Поиск" class=" input-default">
+						<input type="text" onkeyup="searchItems(event)" placeholder="Поиск" class=" input-default">
 					</div>
 
 					<ul class="search-items__list ">
