feat:добавил комментарии func

--- a/pages/create-smeta.html
+++ b/pages/create-smeta.html
@@ -297,7 +297,8 @@
 				<button type="submit" class="butt-success " data-toggle="dropdown" aria-expanded="false">Экспортировать
 				</button>
 				<button class="butt">Обновить цены</button>
-				<button class="butt bg-gradient-danger" onclick="deleteSelectedItems()">Удалить выброное</button>
+				<button class="butt bg-gradient-danger" onclick="deleteSelectedItems()" type="button">Удалить
+					выброное</button>
 				<div>Кол-во выбраных: <span data-selected-count>0</span></div>
 			</div>
 		</form>
