feat: обертнул форму

--- a/pages/create-template.html
+++ b/pages/create-template.html
@@ -98,7 +98,7 @@
 		</aside>
 		<!-- Конец главгый сайдбар -->
 
-		<div class="content-wrapper p-4 ">
+		<form class="content-wrapper p-4 ">
 			<h1 class="big-title">Создать шаблон</h1>
 
 			<div class="container-content" data-select2-id="14">
@@ -216,30 +216,30 @@
 				<button class="butt bg-gradient-danger" onclick="deleteSelectedItems()">Удалить выброное</button>
 				<div>Кол-во выбраных: <span data-selected-count>0</span></div>
 			</div>
-		</div>
+			</а>
 
-	</div>
-
-
-	<!-- jQuery -->
-	<script src="../plugins/jquery/jquery.min.js"></script>
-	<!-- Bootstrap 4 -->
-	<script src="../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-	<!-- Select2 -->
-	<script src="../plugins/select2/js/select2.full.min.js"></script>
-	<!-- jQuery UI 1.11.4 -->
-	<script src="../plugins/jquery-ui/jquery-ui.min.js"></script>
-	<!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
+		</form>
 
 
+		<!-- jQuery -->
+		<script src="../plugins/jquery/jquery.min.js"></script>
+		<!-- Bootstrap 4 -->
+		<script src="../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+		<!-- Select2 -->
+		<script src="../plugins/select2/js/select2.full.min.js"></script>
+		<!-- jQuery UI 1.11.4 -->
+		<script src="../plugins/jquery-ui/jquery-ui.min.js"></script>
+		<!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
 
 
 
 
 
-	<script src="../dist/js/adminlte.min.js?v=3.2.0"></script>
 
-	<script type="module" src="../src/assets/js/main.js"></script>
+
+		<script src="../dist/js/adminlte.min.js?v=3.2.0"></script>
+
+		<script type="module" src="../src/assets/js/main.js"></script>
 
 
 
